--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>兇兇貓頭鷹</title>
+    <title>兇兇貓頭鷹 GRUMPY OWL</title>
   </head>
   <body>
     <h1>Hello World!!</h1>
