--- a/calpal.html
+++ b/calpal.html
@@ -11,21 +11,22 @@
 
 header{
     background: ffff;
-    padding:100px;
+    padding: 80px;
 }
 .logo-hori{
-    width: 292px;
-    height: 135px;
+    display: block;
+    width: 228px;
+    height: 105px;
+    background-repeat: no-repeat;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 10px;
-    background-repeat: no-repeat;
-    display: block;
+    margin-bottom: 20px;
 }
 header h1{
     text-align: center;
     color: #6B4637;
     font-family: Microsoft JhengHei;
+    font-size: 20px;
 }
 button{
         color: white;
@@ -34,7 +35,6 @@ button{
         padding: 14px 20px;
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
         border-radius: 8px;
-        margin: 50px;
     }
 .download{
         background-color: #40A3FF;;
@@ -73,7 +73,6 @@ section.hero-2 h1{
 .body{
     background-color:ffff;
     position: relative;
-    width:100%;
     height: 900px;
 }
 section.body.A{
@@ -107,12 +106,15 @@ div.description{
     font-size: 18px;
     letter-spacing: -0.015em;
     line-height: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .icon-img{
     position: absolute;
     width: 108px;
     height: 108px;
     left: calc(50% - 108px/2 - 160px);
+    margin-left: 10%;
     top: 650px;
     background: #FFFFFF;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
@@ -128,7 +130,7 @@ div.description{
     display: block;
 }
 .showcase{
-    width: 412px;
+    width: 375px;
     margin-left: auto;
     margin-right: auto;
     background-repeat: no-repeat;
@@ -136,16 +138,13 @@ div.description{
 }
 .hero-3{
     display: flex;
-    flex-direction: row;
-    padding: 1px;
-    margin-left: auto;
-    margin-right: auto;
+    padding: 26px;
 }
 .calpal-txt{
     height: 32px;
-    margin-top: 55px;
-    margin-left: 25%;
-    margin-right: 0px;
+    padding-right: 50px;
+    padding-left: 20px;
+    padding-top: 5px;
 }
 </style>
 
@@ -153,7 +152,7 @@ div.description{
     <nav>
         <ul>
             <li class="logo"><a href="index.html">Grumpy Owl Studio Logo</a></li>
-            <li class="navgation studioname"><a href="index.html">Grumpy Owl</a></li>
+            <li class="navgation studioname"><a href="index.html"></a></li>
             <li class="navgation"><a href="calpal.html">Cal Pal</a></li>
             <li class="navgation"><a href="contact.html">Contact</a></li>
         </ul>
@@ -222,8 +221,10 @@ div.description{
 
 
     <section class="hero-3">
+
         <img src="images/calpal_name@2x.png" alt="" class="calpal-txt">
-        <div class="right">
+
+        <div>
             <button class="btn download">即將登場</button>
         </div>
         
