--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         text-align: center;
         padding-left: 10%;
         padding-right: 10%;
-        padding-top: 0%;
+        padding-top: 20px;
         position: relative;
         bottom: 40px;
     }
@@ -66,7 +66,7 @@
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
         border-radius: 8px;
         position: relative;
-        bottom: 20px;
+        bottom: 30px;
     }
     .btn{
         margin: auto;
@@ -105,7 +105,7 @@
     <nav>
         <ul>
             <li class="logo"><a href="index.html">Grumpy Owl Studio Logo</a></li>
-            <li class="navgation studioname"><a href="index.html">Grumpy Owl</a></li>
+            <li class="navgation studioname"><a href="index.html"></a></li>
             <li class="navgation"><a href="calpal.html">Cal Pal</a></li>
             <li class="navgation"><a href="contact.html">Contact</a></li>
         </ul>
@@ -119,7 +119,7 @@
     <section class="body showcase">
         <ul>
             <img src="images/calpal_icon.jpg" alt="Cal Pal Icon" class="icon">
-            <li class="calpal text "><h2>記錄便當卡路里的最佳夥伴</h2></li>
+            <li ><h2 class="calpal text ">記錄便當卡路里的最佳夥伴</h2></li>
             <div class="btn">
                 <button class="btn download">即將登場</button>
             </div>
